welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:10: error: not found: value nbreBiscuit
	nbreBiscuit = nbreBiscuit + 1;
        ^