welcome.lessons.welcome.variables.RunFour.scala.code
var nbreBiscuits:Int = 0;

while(nbreBiscuits < 4)
{
	while(!estSurBiscuit)
	{
		avance();
	}
	nbreBiscuit = nbreBiscuit + 1;
}
